<resources>
    <string name="app_name">掌厨</string>
    <string name="app_activity_flash_start">开启掌厨</string>
    <string name="app_sign_up">注册</string>
    <string name="app_log_in">登录</string>
    <string name="app_account">账号</string>
    <string name="app_write_account">请输入你的账号</string>
    <string name="app_code">密码</string>
    <string name="app_write_code">请输入你的密码</string>
    <string name="app_to_signup">还没有账号？点击注册</string>
    <string name="app_other_logup">其他方式</string>
    <string name="app_login_telephone">手机号注册</string>
    <string name="app_or">or</string>
    <string name="app_login_teleohone">手机号登陆</string>
    <string name="app_tele_number">手机号</string>
    <string name="app_write_telenumber">请输入你的手机号</string>
    <string name="app_define">验证码</string>
    <string name="app_write_define">请输入验证码</string>
    <string name="app_send_define">发送验证码</string>
    <string name="app_define_logup">注 册</string>
    <string name="app_define_login">登录</string>
    <string name="app_makeof">作品</string>
    <string name="app_past">历史足迹</string>
    <string name="app_like">收藏</string>
    <string name="app_introduce">亲!给自己添加一下个人介绍吧～～</string>
    <string name="app_delete">退出登录</string>
    <string name="app_set_name">还未设置名字哦</string>
    <string name="app_image">头像</string>
    <string name="app_setting">个人信息</string>
    <string name="app_setting_name">昵称</string>
    <string name="app_setting_introduce">个人介绍</string>
    <string name="app_nickname">昵称</string>
    <string name="app_complete">完成</string>
    <string name="app_write_nickname">请输入昵称</string>
    <string name="app_self_introduce">个人介绍</string>
    <string name="app__200">200字以内</string>
    <string name="app_search">试试搜索想要的菜谱</string>
    <string name="app_daily_recommand">今日推荐</string>
    <string name="app_mian_more">更多推荐</string>
    <string name="app_recommand">吃货种草机</string>
    <string name="app_more_recommand">更多种草场景</string>
    <string name="app_big_meat">肉的盛宴</string>
    <string name="app_eat_meat">就要吃肉</string>
    <string name="app_snacks">特色小吃</string>
    <string name="app_once_eat">一口一个</string>
    <string name="app_way">做法</string>
    <string name="app_source">酱汁特色</string>
    <string name="app_dousha">豆沙</string>
    <string name="app_tian">甜味回忆</string>
    <string name="app_sichuan">入川必吃</string>
    <string name="app_chuanwei">川味</string>
    <string name="app_zhushi">主食</string>
    <string name="app_mifen">寻味米粉</string>
    <string name="app_cook">为爱掌厨，用心做顿好饭</string>
    <string name="app_how">做法</string>
    <string name="app_from">食材</string>
    <string name="app_content">相关内容</string>
    <string name="app_prepare">准备时间</string>
    <string name="app_cook_cook">制作时间</string>
    <string name="app_people">适合人数</string>
    <string name="app_detail_inroduce">厨师介绍</string>
    <string name="app_tag">标签</string>
    <string name="app_star">我的收藏</string>
    <string name="app_search_foryou">为你找到</string>
    <string name="app_s">搜索</string>
    <string name="app_deletepast">清空足迹</string>
    <string name="app_grass">全部场景</string>
    <string name="app_commulity">我的动态</string>
    <string name="app_edit">编辑</string>
    <string name="app_edit_please">请编辑你的内容</string>
</resources>
