<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_height="match_parent" android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_marginTop="30dp"
              android:background="#EDEDED">

    <RelativeLayout android:layout_width="match_parent"
                    android:background="#FAFAFA"
                    android:id="@+id/rl_back"
                    android:layout_height="50dp">

        <ImageView android:layout_width="15dp"
                   android:layout_alignParentStart="true"
                   android:layout_height="15dp"
                   android:layout_marginStart="15dp"
                   android:id="@+id/iv_setting_back_introduce"
                   android:layout_centerVertical="true"
                   android:background="@drawable/back"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_self_introduce"
                  android:textColor="#303030"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:textSize="20sp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:layout_centerVertical="true"
                  android:layout_alignParentEnd="true"
                  android:layout_marginEnd="20dp"
                  android:visibility="invisible"
                  android:id="@+id/tv_complete_introduce"
                  android:text="@string/app_complete"/>
    </RelativeLayout>


    <View android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="#E9E9E9"/>

    <com.mredrock.cyxbs.freshman.weight.AppShawdowLayout android:layout_width="match_parent"
                                                         android:layout_height="250dp"
                                                         android:layout_marginTop="50dp"
                                                         android:layout_marginStart="10dp"
                                                         android:layout_marginEnd="10dp"
                                                         android:background="#FAFAFA"
                                                         app:app_shadow_color="#E9E9E9"
                                                         app:app_shadow_width="1dp">

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp"
                  android:background="@null"
                  android:maxLength="200"
                  android:layout_marginTop="10dp"
                  android:id="@+id/et_set_introduce"
                  android:hint="@string/app_introduce"/>

    </com.mredrock.cyxbs.freshman.weight.AppShawdowLayout>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"
              android:layout_marginTop="10dp"
              android:layout_marginStart="300dp"
              android:text="@string/app__200"/>
</LinearLayout>