<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FAFAFA"
              android:layout_marginTop="30dp"
              android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent"
                    android:background="#FAFAFA"
                    android:id="@+id/rl_back"
                    android:layout_height="50dp">

        <ImageView android:layout_width="15dp"
                   android:layout_alignParentStart="true"
                   android:layout_height="15dp"
                   android:layout_marginStart="15dp"
                   android:id="@+id/iv_setting_back"
                   android:layout_centerVertical="true"
                   android:background="@drawable/back"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_nickname"
                  android:textColor="#303030"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:textSize="20sp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:layout_centerVertical="true"
                  android:layout_alignParentEnd="true"
                  android:layout_marginEnd="20dp"
                  android:visibility="invisible"
                  android:id="@+id/tv_complete"
                  android:text="@string/app_complete"/>
    </RelativeLayout>


    <View android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="#E9E9E9"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#EDEDED"
                  android:layout_marginTop="40dp"
                  android:orientation="vertical">

        <EditText android:layout_width="200dp"
                  android:layout_height="40dp"
                  android:layout_marginStart="20dp"
                  android:background="@null"
                  android:maxLength="8"
                  android:singleLine="true"
                  android:id="@+id/et_set_nickname"
                  android:hint="@string/app_write_nickname"/>
    </LinearLayout>

</LinearLayout>