<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#EDEDED"
              android:layout_marginTop="30dp"
              android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent"
                    android:background="#FAFAFA"
                    android:id="@+id/rl_back"
                    android:layout_height="50dp">

        <ImageView android:layout_width="15dp"
                   android:layout_alignParentStart="true"
                   android:layout_height="15dp"
                   android:layout_marginStart="15dp"
                   android:id="@+id/iv_setting_back"
                   android:layout_centerVertical="true"
                   android:background="@drawable/back"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_setting"
                  android:textColor="#303030"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true"
                  android:textSize="20sp"/>
    </RelativeLayout>


    <View android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="#E9E9E9"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="#FAFAFA"
                    android:layout_marginTop="20dp"
                    android:id="@+id/rl_setting_name">


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_setting_name"
                  android:layout_centerVertical="true"
                  android:textSize="18sp"
                  android:layout_marginStart="15dp"
                  android:textColor="#404040"/>

        <ImageView android:layout_width="15dp"
                   android:layout_height="15dp"
                   android:layout_alignParentEnd="true"
                   android:layout_marginEnd="10dp"
                   android:id="@+id/iv_next_setting_name"
                   android:layout_centerVertical="true"
                   android:background="@drawable/nexxt"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_toStartOf="@id/iv_next_setting_name"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:layout_centerVertical="true"
                  android:layout_marginEnd="20dp"
                  android:text="@string/app_set_name" android:id="@+id/tv_nick_names"/>

    </RelativeLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="#E9E9E9"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="#FAFAFA"
                    android:layout_marginTop="20dp"
                    android:id="@+id/rl_introduce">


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_setting_introduce"
                  android:layout_centerVertical="true"
                  android:textSize="18sp"
                  android:layout_marginStart="15dp"
                  android:textColor="#404040"/>

        <ImageView android:layout_width="15dp"
                   android:layout_height="15dp"
                   android:layout_alignParentEnd="true"
                   android:layout_marginEnd="10dp"
                   android:id="@+id/iv_next_setting_introduce"
                   android:layout_centerVertical="true"
                   android:background="@drawable/nexxt"/>

    </RelativeLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="#E9E9E9"/>

</LinearLayout>