<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        tools:context=".ui.activity.EditActivity">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FFFFFF">

        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/back"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical|start"
                android:id="@+id/iv_edit_back" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#404040"
                android:layout_gravity="center"
                android:text="@string/app_edit" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#404040"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="20dp"
                android:text="@string/app_complete"
                android:visibility="invisible"
                android:id="@+id/tv_edit" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/app_imageview"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                tools:background="@drawable/cake"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/app_edit_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/app_edit_please"
                android:drawableStart="@drawable/edit"
                android:drawablePadding="10dp"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="@+id/app_imageview"
                app:layout_constraintStart_toStartOf="@+id/app_imageview"
                app:layout_constraintTop_toBottomOf="@+id/app_imageview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>